<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.VotacionFragment"
    android:background="@drawable/background"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3bffcccc"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lProyecto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="30dp"/>

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtDescripcion"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine|text"
                        android:textSize="18dp"
                        android:maxLines="10" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lEscanear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtEscaneaTu"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtCodigoQR"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lVotos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCreatividad"
                        android:textAlignment="textStart"
                        android:textSize="18dp" />

                    <RatingBar
                        android:id="@+id/rbCreatividad"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:numStars="5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtImplementacion"
                        android:textAlignment="textStart"
                        android:textSize="18dp" />

                    <RatingBar
                        android:id="@+id/rbViabilidad"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:numStars="5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtComunicacion"
                        android:textAlignment="textStart"
                        android:textSize="18dp" />

                    <RatingBar
                        android:id="@+id/rbComunicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:numStars="5" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lBoton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnVotar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/btnVotar"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:background="@drawable/btn_entrar" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lVerEstadisticas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVerEstadisticas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/verEstadisticas"
                android:textSize="18dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>