<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditarFragment"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lProyecto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="30dp" />

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/degradado_circular" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/txtEditarProyecto"
                    android:textColor="#FFFFFF"
                    android:textSize="15dp" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#000000"
                            android:visibility="invisible" />

                        <Spinner
                            android:id="@+id/spinnerCiclo"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:background="#28ffffff"
                            android:backgroundTint="#28ffffff"
                            android:drawSelectorOnTop="true"
                            android:entries="@array/ciclos"
                            android:spinnerMode="dropdown" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#000000"
                            android:visibility="invisible" />

                        <EditText
                            android:id="@+id/txtTituloEditar"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:background="#28ffffff"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/txtTituloRegistro"
                            android:inputType="textPersonName"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text=""
                            android:textColor="#FFFFFF"
                            android:textColorHint="#96383838" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#000000"
                            android:visibility="invisible" />

                        <EditText
                            android:id="@+id/txtDescripcion"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5"
                            android:background="#28ffffff"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="top|left"
                            android:hint="@string/txtDescripcionRegistro"
                            android:inputType="textMultiLine|text"
                            android:maxLines="10"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text=""
                            android:textColor="#FFFFFF"
                            android:textColorHint="#96383838" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#000000"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp">

                            <Button
                                android:id="@+id/btnGuardar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/btn_entrar"
                                android:text="@string/btnGuardarRegistro"
                                android:textColor="#FFFFFF" />

                            <Button
                                android:id="@+id/btnCancelar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/btn_entrar"
                                android:text="@string/btnCancelarRegistro"
                                android:textColor="#FFFFFF" />

                        </LinearLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#000000"
                            android:visibility="invisible" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>